better enumeration of 1d simplexes

--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -17,9 +17,9 @@
     "from PIL import Image\n",
     "\n",
     "## set the following appropriately\n",
-    "PH_PROG = \"CubicalRipser.exe\"\n",
+    "#PH_PROG = \"CubicalRipser.exe\"\n",
     "#PH_PROG = \"CR3.exe\"\n",
-    "#PH_PROG = \"./cubicalripser\"\n",
+    "PH_PROG = \"./cubicalripser\"\n",
     "volfile = \"vol.npy\"\n",
     "ph_out = \"PH.npy\"\n",
     "#volfile = \"d:/ml/ipf/img.npy\"\n",
@@ -38,6 +38,19 @@
     "img = np.dstack([Image.open(f).convert('L') for f in files]).astype('f8')\n",
     "np.save(volfile,img)\n",
     "print(img.shape, img.dtype, np.min(img),np.max(img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load image files and save in a 2D array\n",
+    "#input_file = \"lena00.jpg\"\n",
+    "#img = np.array(Image.open(input_file).convert('L'),dtype='f8')\n",
+    "#np.save(volfile,img)\n",
+    "#print(img.shape, img.dtype, np.min(img),np.max(img))"
    ]
   },
   {
