--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,11 @@
     "from PIL import Image\n",
     "\n",
     "## set the following appropriately\n",
+    "#PH_PROG = \"CubicalRipserFixOld.exe\"\n",
     "PH_PROG = \"CubicalRipser.exe\"\n",
-    "#PH_PROG = \"CR3.exe\"\n",
     "#PH_PROG = \"./cubicalripser\"\n",
     "volfile = \"vol.npy\"\n",
-    "ph_out = \"PH.npy\"\n",
-    "volfile = \"d:/ml/ipf/img.npy\"\n",
-    "ph_out = \"d:/ml/ipf/PH.npy\""
+    "ph_out = \"PH.npy\""
    ]
   },
   {
@@ -55,22 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompletedProcess(args='CubicalRipser.exe --maxdim 0 --output d:/ml/ipf/PH.npy d:/ml/ipf/img.npy', returncode=0)\n",
-      "elapsed_time:56.03558421134949 sec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compute PH (takes time)\n",
     "start = time.time()\n",
-    "result = subprocess.run(PH_PROG+' --maxdim 0 --output '+ph_out+' '+volfile, shell=True)\n",
+    "result = subprocess.run(PH_PROG+' --output '+ph_out+' '+volfile, shell=True)\n",
     "print(result)\n",
     "elapsed_time = time.time() - start\n",
     "print (\"elapsed_time:{} sec\".format(elapsed_time))"
@@ -78,32 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#0-cycle 499580, #1-cycle 759479, #2-cycle 170526\n",
-      "[[    0. -1286. -1266.   262.   164.    96.]\n",
-      " [    0. -1285. -1263.   190.    78.   216.]\n",
-      " [    0. -1268. -1263.   322.   128.   133.]\n",
-      " [    0. -1292. -1263.   167.   298.   112.]\n",
-      " [    0. -1265. -1260.   311.   156.   332.]]\n",
-      "[[1.000e+00 1.412e+03 1.420e+03 2.910e+02 5.400e+01 1.650e+02]\n",
-      " [1.000e+00 1.170e+03 1.182e+03 1.750e+02 5.500e+01 2.400e+02]\n",
-      " [1.000e+00 1.130e+03 1.153e+03 2.880e+02 5.200e+01 1.660e+02]\n",
-      " [1.000e+00 1.125e+03 1.132e+03 2.900e+02 5.300e+01 1.630e+02]\n",
-      " [1.000e+00 1.121e+03 1.226e+03 1.770e+02 5.400e+01 2.400e+02]]\n",
-      "[[   2. 1624. 1641.  271.  122.  216.]\n",
-      " [   2. 1556. 1639.  293.   55.  165.]\n",
-      " [   2. 1495. 1548.  295.   56.  163.]\n",
-      " [   2. 1465. 1547.  252.   41.  242.]\n",
-      " [   2. 1455. 1572.  206.   43.  271.]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "# load computed PH\n",
     "pd = np.load(ph_out)\n",
