--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "## set the following appropriately\n",
     "#PH_PROG = \"CubicalRipserFixOld.exe\"\n",
     "PH_PROG = \"CubicalRipser.exe\"\n",
-    "#PH_PROG = \"./cubicalripser\"\n",
+    "PH_PROG = \"./cubicalripser\"\n",
     "volfile = \"vol.npy\"\n",
     "ph_out = \"PH.npy\""
    ]
@@ -167,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
