--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(512, 512, 9) float64 0.0 255.0\n"
+     ]
+    }
+   ],
    "source": [
     "# load image files and stack into a 3D array\n",
     "input_files = \"*.jpg\"\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CompletedProcess(args='./cubicalripser --output PH.npy vol.npy', returncode=0)\n",
+      "elapsed_time:8.958146095275879 sec\n"
+     ]
+    }
+   ],
    "source": [
     "# compute PH (takes time)\n",
     "start = time.time()\n",
@@ -167,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
