--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -12,13 +12,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "3eJkuQ55SYrs"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: persim in /home/skaji/anaconda3/lib/python3.7/site-packages (0.1.3)\n",
+      "Requirement already satisfied: hopcroftkarp in /home/skaji/anaconda3/lib/python3.7/site-packages (from persim) (1.2.5)\n",
+      "Requirement already satisfied: numpy in /home/skaji/anaconda3/lib/python3.7/site-packages (from persim) (1.19.2)\n",
+      "Requirement already satisfied: scikit-learn in /home/skaji/anaconda3/lib/python3.7/site-packages (from persim) (0.23.2)\n",
+      "Requirement already satisfied: matplotlib in /home/skaji/anaconda3/lib/python3.7/site-packages (from persim) (3.3.2)\n",
+      "Requirement already satisfied: scipy in /home/skaji/anaconda3/lib/python3.7/site-packages (from persim) (1.5.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in /home/skaji/anaconda3/lib/python3.7/site-packages (from scikit-learn->persim) (0.17.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/skaji/anaconda3/lib/python3.7/site-packages (from scikit-learn->persim) (2.1.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (1.3.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (2.8.1)\n",
+      "Requirement already satisfied: certifi>=2020.06.20 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (2020.6.20)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (8.0.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/skaji/anaconda3/lib/python3.7/site-packages (from matplotlib->persim) (2.4.7)\n",
+      "Requirement already satisfied: six>=1.5 in /home/skaji/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.1->matplotlib->persim) (1.15.0)\n",
+      "Collecting git+https://github.com/shizuo-kaji/CubicalRipser_3dim\n",
+      "  Cloning https://github.com/shizuo-kaji/CubicalRipser_3dim to /tmp/pip-req-build-i2awdmbs\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied (use --upgrade to upgrade): cripser==0.0.6 from git+https://github.com/shizuo-kaji/CubicalRipser_3dim in /home/skaji/anaconda3/lib/python3.7/site-packages\n",
+      "Building wheels for collected packages: cripser\n",
+      "  Building wheel for cripser (PEP 517) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for cripser: filename=cripser-0.0.6-cp37-cp37m-linux_x86_64.whl size=294267 sha256=0e5e694c884fac0b3f10c4b8464b4c2267975b9dfbd9acab4e058f7f5e34b1f1\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-t9fe68g_/wheels/7b/8e/b1/bf858a2c6c9b80f3f55e1840fc7752c8dd982ab48f6b337df7\n",
+      "Successfully built cripser\n"
+     ]
+    }
+   ],
    "source": [
     "## If you do not have the necessary libraries installed, run this cell (only for once)\n",
     "## Be patient! It takes time.\n",
@@ -30,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -53,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -72,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -162,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -173,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elapsed_time:5.054701566696167 sec\n",
+      "elapsed_time:5.067887306213379 sec\n",
       "Betti numbers:  [48836, 61957, 16699]\n"
      ]
     }
@@ -188,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -218,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elapsed_time:5.9130072593688965 sec\n",
+      "elapsed_time:5.959993839263916 sec\n",
       "Betti numbers:  [25976, 62397, 32712]\n"
      ]
     },
