--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -40,7 +40,7 @@
     "## Be patient! It takes time.\n",
     "# for standard libraries such as numpy, scipy, scikit-learn\n",
     "# I recommend to use the package manager \"conda\". e.g.,  \"conda install numpy scipy scikit-learn\"\n",
-    "!pip install persim matplotlib Pillow pooch\n",
+    "!pip install persim matplotlib Pillow pooch PersistenceImages\n",
     "!pip install -U cripser\n",
     "#!pip install git+https://github.com/shizuo-kaji/CubicalRipser_3dim"
    ]
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,8 @@
     "    img2d = skimage.data.camera()\n",
     "    io.imsave(imgfile, img2d)\n",
     "\n",
+    "#img2d = skimage.transform.resize(img2d,(300,400))\n",
+    "\n",
     "## apply distance transform\n",
     "img2d_dt = dt(img2d)\n",
     "\n",
@@ -177,7 +179,7 @@
      "text": [
       "Betti numbers:  [13806, 9292, 0]\n",
       "Betti numbers:  [9579, 13530, 0]\n",
-      "elapsed_time:0.3388400077819824 sec\n"
+      "elapsed_time:0.3061411380767822 sec\n"
      ]
     },
     {
@@ -203,6 +205,7 @@
    ],
    "source": [
     "# 2D: compute PH for the V-construction of the original image (pixel value filtration)\n",
+    "\n",
     "start = time.time()\n",
     "pd = cr.computePH(img2d)\n",
     "pds = [pd[pd[:,0] == i] for i in range(3)]\n",
@@ -223,7 +226,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Betti numbers:  [13806, 9292, 0]\n",
+      "Betti numbers:  [9579, 13530, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute PH for the T-construction by GUDHI\n",
+    "import gudhi\n",
+    "gd = gudhi.CubicalComplex(vertices=img2d)\n",
+    "#    gd.compute_persistence()\n",
+    "res = gd.persistence(2,0) # coeff = 2\n",
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
+    "\n",
+    "gd = gudhi.CubicalComplex(top_dimensional_cells=img2d)\n",
+    "res = gd.persistence(2,0) # coeff = 2\n",
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +263,7 @@
      "text": [
       "Betti numbers:  [297, 406, 0]\n",
       "Betti numbers:  [261, 885, 0]\n",
-      "elapsed_time:0.2608675956726074 sec\n"
+      "elapsed_time:0.23601555824279785 sec\n"
      ]
     },
     {
@@ -284,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +354,10 @@
     "    #img3d = skimage.util.img_as_float(cells3d()[:, 1, :, :]).transpose((1,2,0))  # requires pooch\n",
     "np.save(volfile,img3d.astype(np.float64))\n",
     "\n",
+    "\n",
+    "# rescaleing\n",
+    "#img3d = skimage.transform.resize(img3d,(130,160,6))\n",
+    "\n",
     "## apply distance transform\n",
     "img3d_dt = dt(img3d,signed=True)\n",
     "\n",
@@ -334,13 +369,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98e141b46890463a913f9246786efd45",
+       "model_id": "dd535237c8694d06b6b222536ec0a732",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +392,7 @@
        "<function __main__.explore_slices.<locals>.display_slice(plane=3)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -382,7 +417,7 @@
      "text": [
       "Betti numbers:  [11226, 13762, 2893]\n",
       "Betti numbers:  [6019, 13244, 6628]\n",
-      "elapsed_time:1.6184632778167725 sec\n"
+      "elapsed_time:1.4333264827728271 sec\n"
      ]
     },
     {
@@ -427,6 +462,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Betti numbers:  [11226, 13762, 2893, 0]\n",
+      "Betti numbers:  [6019, 13244, 6628, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute PH for the T-construction by GUDHI\n",
+    "import gudhi\n",
+    "gd = gudhi.CubicalComplex(vertices=img3d)\n",
+    "#    gd.compute_persistence()\n",
+    "res = gd.persistence(2,0) # coeff = 2\n",
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
+    "\n",
+    "gd = gudhi.CubicalComplex(top_dimensional_cells=img3d)\n",
+    "res = gd.persistence(2,0) # coeff = 2\n",
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -436,7 +499,7 @@
      "text": [
       "Betti numbers:  [1879, 942, 144]\n",
       "Betti numbers:  [1064, 949, 247]\n",
-      "elapsed_time:1.1886250972747803 sec\n"
+      "elapsed_time:1.0818467140197754 sec\n"
      ]
     },
     {
@@ -461,7 +524,7 @@
     }
    ],
    "source": [
-    "# 2D: compute PH for the V-construction of the distance transformed image\n",
+    "# 3D: compute PH for the V-construction of the distance transformed image\n",
     "start = time.time()\n",
     "pd = cr.computePH(img3d_dt)\n",
     "pds = [pd[pd[:,0] == i] for i in range(3)]\n",
@@ -488,10 +551,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "#0-cycle 1879, #1-cycle 942, #2-cycle 144\n",
+      "[dim,birth,death,x1,y1,z1,x2,y2,z2]\n",
+      "[[  0.         -41.15823125 -41.10960958 252.           0.\n",
+      "    5.         252.           0.           3.        ]\n",
+      " [  0.         -34.9141805  -34.84250278 244.           8.\n",
+      "    0.         244.           7.           0.        ]\n",
+      " [  0.         -34.84250278 -34.78505426 244.           8.\n",
+      "    5.         244.           8.           3.        ]\n",
+      " [  0.         -34.23448554 -34.17601498 243.           9.\n",
+      "    5.         243.           9.           3.        ]\n",
+      " [  0.         -34.3074336  -34.0881211  243.           9.\n",
+      "    0.         243.           8.           0.        ]]\n",
+      "[[  1.           1.41421356   1.73205081  91.          50.\n",
+      "    4.          91.          50.           3.        ]\n",
+      " [  1.           1.41421356   1.73205081  91.          51.\n",
+      "    5.          92.          50.           5.        ]\n",
+      " [  1.           1.41421356   1.73205081  13.         163.\n",
+      "    5.          13.         163.           4.        ]\n",
+      " [  1.           1.41421356   1.73205081  19.         168.\n",
+      "    5.          19.         168.           4.        ]\n",
+      " [  1.           1.41421356   1.73205081  49.         177.\n",
+      "    5.          49.         177.           4.        ]]\n",
+      "[[  2.           1.73205081   2.         100.          55.\n",
+      "    3.          99.          56.           3.        ]\n",
+      " [  2.           1.73205081   2.         160.         121.\n",
+      "    3.         161.         122.           3.        ]\n",
+      " [  2.           1.73205081   2.         219.         248.\n",
+      "    3.         220.         248.           3.        ]\n",
+      " [  2.           1.41421356   2.          95.          54.\n",
+      "    5.          95.          56.           3.        ]\n",
+      " [  2.           1.41421356   1.73205081 156.         111.\n",
+      "    5.         156.         111.           4.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print some PH cycles\n",
+    "print(\"#0-cycle {}, #1-cycle {}, #2-cycle {}\".format(len(pds[0]),len(pds[1]),len(pds[2])))\n",
+    "print(\"[dim,birth,death,x1,y1,z1,x2,y2,z2]\") # each line contains (dim,birth,death,x1,y1,z1,x2,y2,z2), where (x1,y1,z1) is the location of the creator cell of the cycle and (x2,y2,z2) is the location of the destroyer cell of the cycle\"\n",
+    "print(pds[0][:5])\n",
+    "print(pds[1][:5])\n",
+    "print(pds[2][:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "reduced Betti numbers shold be up side down:  [1063, 949, 247] [247, 949, 1063]\n",
-      "PH0 vs PH2 False\n",
-      "PH1 vs PH1 False\n",
-      "PH2 vs PH0 False\n"
+      "PH0 vs PH2 True\n",
+      "PH1 vs PH1 True\n",
+      "PH2 vs PH0 True\n"
      ]
     }
    ],
@@ -499,7 +615,7 @@
     "# check Alexander duality\n",
     "pdt = tcr.computePH(img3d_dt)\n",
     "pdt_reduced = pdt[ np.abs(pdt[:,1:3]).max(axis=1)<999999 ]\n",
-    "pdt_reduced =pdt_reduced[np.lexsort((pdt_reduced[:,0], pdt_reduced[:,1], pdt_reduced[:,2]))]\n",
+    "pdt_reduced =pdt_reduced[np.lexsort((pdt_reduced[:,0], pdt_reduced[:,2], pdt_reduced[:,1]))]\n",
     "\n",
     "pdt2 = cr.computePH(img3d_dt,embedded=True)\n",
     "pdt2_reduced = pdt2[ np.abs(pdt2[:,1:3]).max(axis=1)<999999 ]\n",
@@ -517,25 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Y0rTyRNPSU08"
-   },
-   "outputs": [],
-   "source": [
-    "# print some PH cycles\n",
-    "print(\"#0-cycle {}, #1-cycle {}, #2-cycle {}\".format(len(pds[0]),len(pds[1]),len(pds[2])))\n",
-    "print(\"[dim,birth,death,x1,y1,z1,x2,y2,z2]\") # each line contains (dim,birth,death,x1,y1,z1,x2,y2,z2), where (x1,y1,z1) is the location of the creator cell of the cycle and (x2,y2,z2) is the location of the destroyer cell of the cycle\"\n",
-    "print(pds[0][:5])\n",
-    "print(pds[1][:5])\n",
-    "print(pds[2][:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -575,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -585,7 +683,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4698af677994e06ac4eba1da2fd716e",
+       "model_id": "9840d8559a8f4bd995b3d7cca4122cb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -602,15 +700,16 @@
        "<function __main__.explore_slices.<locals>.display_slice(plane=3)>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Visualise the cycle density heatmap\n",
+    "pd = cr.computePH(img3d)\n",
     "vol = heat_map(img3d,pd,dimension=2)\n",
-    "explore_slices(vol)"
+    "explore_slices(vol,cmap='jet')"
    ]
   },
   {
