--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -179,17 +179,7 @@
      "text": [
       "Betti numbers:  [13806, 9292, 0]\n",
       "Betti numbers:  [9579, 13530, 0]\n",
-      "elapsed_time:0.3061411380767822 sec\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/skaji/anaconda3/lib/python3.10/site-packages/persim/visuals.py:87: RuntimeWarning: overflow encountered in cast\n",
-      "  diagrams = [dgm.astype(np.float32, copy=True) for dgm in diagrams]\n",
-      "/home/skaji/anaconda3/lib/python3.10/site-packages/persim/visuals.py:87: RuntimeWarning: overflow encountered in cast\n",
-      "  diagrams = [dgm.astype(np.float32, copy=True) for dgm in diagrams]\n"
+      "elapsed_time:0.6016569137573242 sec\n"
      ]
     },
     {
@@ -222,6 +212,32 @@
     "persim.plot_diagrams([p[:,1:3] for p in pds], ax=axs[0], title='V-construction')\n",
     "persim.plot_diagrams([p[:,1:3] for p in pdst], ax=axs[1], title='T-construction')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  C_CONTIGUOUS : True\n",
+       "  F_CONTIGUOUS : False\n",
+       "  OWNDATA : False\n",
+       "  WRITEABLE : True\n",
+       "  ALIGNED : True\n",
+       "  WRITEBACKIFCOPY : False\n",
+       "  UPDATEIFCOPY : False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img2d.T.flags"
    ]
   },
   {
@@ -852,7 +868,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -866,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
