cleanup codes by using offset arrays

--- a/demo/cubicalripser.ipynb
+++ b/demo/cubicalripser.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +210,7 @@
     "## plot persistent diagram using persim\n",
     "fig,axs = plt.subplots(1,2)\n",
     "persim.plot_diagrams([p[:,1:3] for p in pds], ax=axs[0], title='V-construction')\n",
-    "persim.plot_diagrams([p[:,1:3] for p in pdst], ax=axs[1], title='T-construction')\n",
-    "\n"
+    "persim.plot_diagrams([p[:,1:3] for p in pdst], ax=axs[1], title='T-construction')\n"
    ]
   },
   {
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +263,7 @@
     "\n",
     "gd = gudhi.CubicalComplex(top_dimensional_cells=img2d)\n",
     "res = gd.persistence(2,0) # coeff = 2\n",
-    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
-    "\n"
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n"
    ]
   },
   {
@@ -331,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +353,7 @@
    "source": [
     "## set the following appropriately\n",
     "IMG_DIR = \"./images/\"  ## dir containing images for a 3D example; all the images must be of the same dimension\n",
-    "volfile = \"img.npy\"  ## the 3d image will be saved into this 3D numpy array file\n",
+    "volfile = \"3d_img.npy\"  ## the 3d image will be saved into this 3D numpy array file\n",
     "\n",
     "# create a 3d stack from 2d images\n",
     "if os.path.isdir(IMG_DIR):\n",
@@ -478,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,8 +498,7 @@
     "\n",
     "gd = gudhi.CubicalComplex(top_dimensional_cells=img3d)\n",
     "res = gd.persistence(2,0) # coeff = 2\n",
-    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n",
-    "\n"
+    "print(\"Betti numbers: \", gd.persistent_betti_numbers(np.inf,-np.inf))\n"
    ]
   },
   {
@@ -840,25 +837,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## utility"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save images in jpg\n",
-    "img3d_fn = \"nuclei\"\n",
-    "for i in range(0,img3d.shape[0],10):\n",
-    "    Image.fromarray((255*img3d[i]).astype(np.uint8)).convert('RGB').save(os.path.join(IMG_DIR,f\"{img3d_fn}_{i:0>4}.jpg\"))"
-   ]
   }
  ],
  "metadata": {
